--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
      <div class="col-sm-6 col-md-3">
        <div class="os-animation" data-animation="bounceInLeft" data-delay=".2s">
        	    <div class="pizza-item">
-                <a href="img/1.png" data-lightbox="example-set" data-title="Freshly made dough">
+                <a href="img/1.png" data-lightbox="example-set" data-title="Freshly made dough on">
                 	<img class="example-image" src="img/1.png" alt="pizza dough on a table.">
                 </a>
        	    </div>	
