--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
      <div class="col-sm-6 col-md-3">
        <div class="os-animation" data-animation="bounceInLeft">
        	    <div class="pizza-item">
-                <a href="img/2.png" data-lightbox="example-set" data-title="Chef crafting ">
+                <a href="img/2.png" data-lightbox="example-set" data-title="Chef crafting fresh ">
                 	<img class="example-image" src="img/2.png" alt="man making pizza.">
                 </a>
        	    </div>	
