--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
      <div class="col-sm-6 col-md-3">
        <div class="os-animation" data-animation="bounceInRight">
        	    <div class="pizza-item">
-                <a href="img/3.png" data-lightbox="example-set" data-title="adding fresh sauce to pizza">
+                <a href="img/3.png" data-lightbox="example-set" data-title="adding fresh sauce to a pizza">
                 	<img class="example-image" src="img/3.png" alt="adding sauce to pizza.">
                 </a>
        	    </div>	
