--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
      <div class="col-sm-6 col-md-3">
        <div class="os-animation" data-animation="bounceInRight" data-delay=".2s">
        	    <div class="pizza-item">
-                <a href="img/4.png" data-lightbox="example-set" data-title="pizza in woodfire">
+                <a href="img/4.png" data-lightbox="example-set" data-title="pizza in woodfire oven">
                 	<img class="example-image" src="img/4.png" alt="pizza in oven.">
                 </a>
        	    </div>	
