--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
      <div class="col-sm-6 col-md-3">
        <div class="os-animation" data-animation="bounceInLeft" data-delay=".2s">
        	    <div class="pizza-item">
-                <a href="img/5.png" data-lightbox="example-set" data-title="chef figure">
+                <a href="img/5.png" data-lightbox="example-set" data-title="chef figure holding">
                 	<img class="example-image" src="img/5.png" alt="pizza.">
                 </a>
        	    </div>	
