--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
      <div class="col-sm-6 col-md-3">
        <div class="os-animation" data-animation="bounceInLeft">
        	    <div class="pizza-item">
-                <a href="img/6.png" data-lightbox="example-set" data-title="">
+                <a href="img/6.png" data-lightbox="example-set" data-title="three">
                 	<img class="example-image" src="img/6.png" alt="three pizzas.">
                 </a>
        	    </div>	
