--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
      <div class="col-sm-6 col-md-3">
        <div class="os-animation" data-animation="bounceInRight">
        	    <div class="pizza-item">
-                <a href="img/7.png" data-lightbox="example-set" data-title="our">
+                <a href="img/7.png" data-lightbox="example-set" data-title="our pizza">
                 	<img class="example-image" src="img/7.png" alt="sliced up pizza.">
                 </a>
        	    </div>	
