--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
      <div class="col-sm-6 col-md-3">
        <div class="os-animation" data-animation="bounceInRight" data-delay=".2s">
        	    <div class="pizza-item">
-                <a href="img/8.png" data-lightbox="example-set" data-title="description">
+                <a href="img/8.png" data-lightbox="example-set" data-title="two">
                 	<img class="example-image" src="img/8.png" alt="two cooked pizzas.">
                 </a>
        	    </div>	
